--- a/index.html
+++ b/index.html
@@ -88,6 +88,34 @@
             <img src="images/chicken.png">
         </div>
     </section>
+    <!-- update section -->
+    <section id="update">
+        <div class="update">
+            <div class="update-top-text">
+                <h1>Get Our Latest Updates</h1>
+                <p>
+                    Subscribe with your email to stay connected...
+                </p>
+            </div>
+            <div class="update-bottom-field">
+                <form>
+                    <input type="email" placeholder="Email" class="update-field-btn email" />
+                    <a href="#" class="update-field-btn subscribe">Subscribe Here</a>
+                </form>
+            </div>
+        </div>
+    </section>
+    <!-- review section -->
+    <section class="review">
+    <div class="review-us">
+        <div class="review">
+            <h2>Please give your valuable ratings to improve our foods and services.Thanyou.</h2>
+        </div>
+        <div class="review-icon">
+            <img src="images/rating.jpg">
+        </div>
+    </div>
+    </section>
     <!-- footer part -->
     <footer>
         <h2>Eat something amazing today </h2>
